fix: hide summary marker on iOS when using fancy variant

--- a/assets/scss/base/_details.scss
+++ b/assets/scss/base/_details.scss
@@ -37,6 +37,8 @@ details[data-variant='fancy'] {
   summary::-webkit-details-marker,
   summary::marker {
     content: "";
+    /* Hide marker on iOS */
+    display:none;
   }
 
   summary:after {
